small-members-tab.theme.css
//META{"name":"Small-members-tab-fixed(April 2018)","description":"Make the members tab smaller(it gets full size when you hover it).","author":"Beard_Design, MKody, NightCross00","version":"1.6.2"}*//{}

/*-------------------made by Beard Design-------------------------*/
.app {
  overflow-x: hidden;
}

div[class*="membersWrap-"] div[class*="members-"] {
  transform: translate(0px);
  z-index: 2000;
  transition: all 400ms cubic-bezier(.2, 0, 0, 1);
}

div[class*="membersWrap-"] div[class*="members-"]:hover {
  transform: translate(-150px);
}

div[class*="membersWrap-"] div[class*="members-"] div[class*="member-"] div[class*="memberInner-"] {
  opacity: 0;
  transition: all 100ms ease;
}

div[class*="membersWrap-"] div[class*="members-"]:hover div[class*="member-"] div[class*="memberInner-"] {
  opacity: 1;
}

div[class*="membersWrap-"] div[class*="members-"] div[class*="membersGroup-"] {
  transform: translate(-50%) scale(0.8);
  transition: 400ms cubic-bezier(.2, 0, 0, 1), max-width 1ms;
  width: auto;
  height: auto;
  display: inline-block;
  min-width: 10px;
  left: 36px;
  position: relative;
  flex-basis: auto;
  box-sizing: border-box;
  text-overflow: ellipsis;
  white-space: clip;
  overflow: visible;
  word-wrap: normal;
  max-width: 90px;
  right: 45px;
  text-align: center;
  padding-left: 0;
  padding-right: 0;
  padding-top: 5px;
}

div[class*="membersWrap-"] div[class*="members-"]:hover div[class*="membersGroup-"] {
  transform: translate(-15px) scale(1);
  max-width: 180px;
  text-overflow: 'a';
}

/* Adjusting Collapsed Member List Width */
div[class*="membersWrap-"] {
  min-width: 70px !important;
  width: 70px !important
}

/* Avatar icon resizing */
.avatar-1BXaQj{
    transform:scale(1);
    width: 38px;
    height:38px;
}

/* Adjusting sizing between each member */
.member-2FrNV0{
    height: 45px;
}

/* TOFIX */
.header-toolbar button.active {
  display: none;
}

.chat.flex-vertical.flex-spacer.private>.content.flex-spacer.flex-horizontal>.flex-spacer.flex-vertical {
  margin-right: 0px;
  z-index: 0
}

/*-------------------made by Beard Design-------------------------*/

